--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -363,6 +363,7 @@ gui.config.showContainerOnLoadInfo = Detailierte Containerinformationen beim Öf
 gui.config.showContainerOnLoadInfo.helpurl = http://jdownloader.ath.cx/page.php?id=102
 gui.config.subPanel.btn_cancel = Abbrechen
 gui.config.subPanel.btn_ok = OK
+gui.config.tabLables.addons = Addon-Manager
 gui.config.tabLables.containerPlugin = Link-Container
 gui.config.tabLables.decryptPlugin = Decrypter Plugins
 gui.config.tabLables.download = Download/Netzwerk
@@ -515,6 +516,10 @@ gui.menu.action.ces.accel = CTRL+h
 gui.menu.action.ces.desc = C.E.S. Eingabe aktivieren
 gui.menu.action.ces.mnem = U
 gui.menu.action.ces.name = CES Eingabe
+gui.menu.action.changes.accel = CTRL+SHIFT+C
+gui.menu.action.changes.desc = Zeige letzte Änderungen
+gui.menu.action.changes.mnem = C
+gui.menu.action.changes.name = Changelog
 gui.menu.action.clipboard.accel = CTRL+8
 gui.menu.action.clipboard.desc = Zwischenablage überwachen
 gui.menu.action.clipboard.mnem = Z
@@ -921,6 +926,11 @@ plugins.YouTube.ConvertDialog.Mp3 = Audio (MP3)
 plugins.YouTube.ConvertDialog.Mp4 = Video (MP4)
 plugins.YouTube.ConvertDialog.action = Dateiformat:
 plugins.YouTube.ConvertDialog.title = Youtube.com Dateiformat
+plugins.config.premium.accountnum = <html><b>Premium Account #%s</b></html>
+plugins.config.premium.accountstatus = Letzter Account Status
+plugins.config.premium.password = Passwort
+plugins.config.premium.test = Status holen
+plugins.config.premium.user = Premium Benutzer
 plugins.container.ccf.useCCF2RSDF = CCF2RSDF statt Onlinedecrypter verwenden
 plugins.container.decrypt = Decrypt link %s
 plugins.container.dlc.extendedInfos = Erweiterte Informationen beim DLC Erstellen abfragen
@@ -979,6 +989,8 @@ plugins.hoster.datenklo.net.premiumUser = Premium Benutzername
 plugins.hoster.datenklo.net.usePremium = Premium Account verwenden
 plugins.hoster.error.agb = AGB nicht akzeptiert
 plugins.hoster.general.passwordProtectedInput = Die Links sind mit einem Passwort geschützt. Bitte geben Sie das Passwort ein:
+plugins.hoster.premium.status_ok = Account ist OK
+plugins.hoster.premiumtab = Premium Einstellungen
 plugins.hoster.rapidshare.com.extendedTab = Erweiterte Einstellungen
 plugins.hoster.rapidshare.com.freeDownloadIfLimitNotReached = Premium: Free Download wenn Limit noch nicht erreicht wurde
 plugins.hoster.rapidshare.com.happyHours = Happy Hour Check
@@ -1009,6 +1021,10 @@ plugins.hoster.rapidshare.de.premiumPass = Premium Passwort
 plugins.hoster.rapidshare.de.premiumUser = Premium Benutzername
 plugins.hoster.rapidshare.de.usePremium = Premium Account verwenden
 plugins.hoster.shareonlinebiz.captcha = Captcha Erkennung
+plugins.menu.accounts = Accounts
+plugins.menu.configs = Konfiguration
+plugins.menu.enable_premium = Account aktivierne
+plugins.menu.premiumInfo = AccountInfo holen
 plugins.optional.JDLightTray.name = JDLightTrayIcon
 plugins.optional.RemoteControl.name = RemoteControl
 plugins.optional.RemoteControl.port = Port:
@@ -1110,6 +1126,8 @@ plugins.optional.newsfeeds.nowSubscribedFound = Es wurden keine abonnierten Down
 plugins.optional.newsfeeds.pleaseAddFeed = Bitte fügen Sie Feeds hinzu.
 plugins.optional.newsfeeds.pleaseCreateSubscription = Bitte erstellen Sie Download Abonnements
 plugins.optional.newsfeeds.pluginTitle = Newsfeed Überprüfung
+plugins.optional.streamsharingtool.action.start = StreamSharing Tool starten
+plugins.optional.streamsharingtool.name = StreamingShare Link-Generator
 plugins.optional.trayIcon.clipboard = Zwischenablage
 plugins.optional.trayIcon.configuration = Konfiguration
 plugins.optional.trayIcon.dnd = Drag'n Drop
@@ -1191,6 +1209,8 @@ sys.warning.linklist.incompatible = Linkliste inkompatibel. \r\nBackup angelegt.
 system.download.triggerfileexists = Wenn eine Datei schon vorhanden ist:
 system.download.triggerfileexists.overwrite = Datei überschreiben
 system.download.triggerfileexists.skip = Link überspringen
+system.update.message.title = Update zur Version %s
+system.update.showchangelog = Zeige alle Änderungen
 train.choose.folder = Wählen sie einen Ordner aus
 train.chooser.title = jDownloader - Train All
 train.method = Wählen Sie eine Methode aus:
