--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -796,7 +796,7 @@ interaction.trigger.testtrigger = Testtrigger
 interaction.trigger.testtrigger.desc = You can execute the testtrigger via the menu
 interaction.unrar.always = always
 interaction.unrar.linkgrabber = Name in link collector
-interaction.unrar.name = interaction.unrar.name
+interaction.unrar.name = Extractor
 interaction.unrar.never = never
 interaction.webupdate.name = Webupdate
 linkinformation.available.name = Available
