--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -647,6 +647,8 @@ gui.tab.plugin_activity.column_progress = Fortschritt
 gui.table.contextmenu.abort = abbrechen
 gui.table.contextmenu.abortpackage = abbrechen
 gui.table.contextmenu.browseLink = im Browser öffnen
+gui.table.contextmenu.copyPassword = Passwort kopieren
+gui.table.contextmenu.copyPassword_package = Passwort kopieren
 gui.table.contextmenu.delete = entfernen
 gui.table.contextmenu.deletepackage = entfernen
 gui.table.contextmenu.disable = deaktivieren
