--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -963,23 +963,40 @@ plugins.optional.jdshutdown.name = JDShutdown
 plugins.optional.langfileeditor.addKey = Schlüssel hinzufügen
 plugins.optional.langfileeditor.adoptDefaults = Standardwert(e) übernehmen
 plugins.optional.langfileeditor.adoptDefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
+plugins.optional.langfileeditor.adoptDefaultValue = Standardwert übernehmen
 plugins.optional.langfileeditor.browse = Auswählen
 plugins.optional.langfileeditor.browseLanguageFile = Language File auswählen
 plugins.optional.langfileeditor.browseSourceFolder = Source Folder auswählen
+plugins.optional.langfileeditor.cancel = Abbrechen
 plugins.optional.langfileeditor.clearAllValues = Alle Werte löschen
 plugins.optional.langfileeditor.close = Schliessen
+plugins.optional.langfileeditor.colorize = Einfärbung
+plugins.optional.langfileeditor.colorizeMissing = Fehlende Einträge einfärben
+plugins.optional.langfileeditor.colorizeOld = Alte Einträge einfärben
 plugins.optional.langfileeditor.deleteSelectedKeys = Ausgewählte(n) Schlüssel löschen
+plugins.optional.langfileeditor.download = SourceCode herunterladen
+plugins.optional.langfileeditor.duplicatedEntries = Doppelte Einträge
 plugins.optional.langfileeditor.editSelectedValues = Ausgewählte(n) Schlüssel bearbeiten
+plugins.optional.langfileeditor.editValue = Wert bearbeiten
 plugins.optional.langfileeditor.entries = Einträge
 plugins.optional.langfileeditor.file = Datei
+plugins.optional.langfileeditor.firstKey = Erster Key
 plugins.optional.langfileeditor.key = Schlüssel
 plugins.optional.langfileeditor.languageFile = Language File: 
 plugins.optional.langfileeditor.languageFile.select = <Bitte Language File auswählen!>
 plugins.optional.langfileeditor.languageFileValue = Language File Wert
 plugins.optional.langfileeditor.name = JDLangFileEditor
+plugins.optional.langfileeditor.ok = OK
+plugins.optional.langfileeditor.pickMissingColor = Farbe für fehlende Einträge auswählen
+plugins.optional.langfileeditor.pickOldColor = Farbe für alte Einträge auswählen
 plugins.optional.langfileeditor.reload = Neu laden
 plugins.optional.langfileeditor.save = Speichern
+plugins.optional.langfileeditor.save.error.message = Beim Schreiben der LanguageFile trat ein Fehler auf:\n%s
+plugins.optional.langfileeditor.save.error.title = Fehler!
+plugins.optional.langfileeditor.save.success.message = LanguageFile erfolgreich gespeichert!
+plugins.optional.langfileeditor.save.success.title = Speichern erfolgreich!
 plugins.optional.langfileeditor.saveAs = Speichern Als
+plugins.optional.langfileeditor.secondKey = Zweiter Key
 plugins.optional.langfileeditor.selectMissing = Fehlende Einträge auswählen
 plugins.optional.langfileeditor.selectOld = Alte Einträge auswählen
 plugins.optional.langfileeditor.show_gui = LanguageEditor starten
@@ -988,6 +1005,7 @@ plugins.optional.langfileeditor.sortEntries = Einträge sortieren
 plugins.optional.langfileeditor.sourceFolder = Source Folder: 
 plugins.optional.langfileeditor.sourceFolder.select = <Bitte Source Folder auswählen!>
 plugins.optional.langfileeditor.sourceValue = Source Wert
+plugins.optional.langfileeditor.string = String
 plugins.optional.langfileeditor.title = jDownloader - Language File Editor
 plugins.optional.langfileeditor.translate = Mit Google übersetzen
 plugins.optional.langfileeditor.translate.error.message = Der eingegebene Language Key wird von Google nicht unterstützt!
