--- a/trunk/ressourcen/jd/languages/Czech.lng
+++ b/trunk/ressourcen/jd/languages/Czech.lng
@@ -977,9 +977,9 @@ gui.config.download.ipcheck.mask = Povolená IPs
 gui.config.general.link.wiki = Wiki - Často kladené dotazy
 gui.configdialog.wikilink.theconfigurationmenu = http://jdownloader.ath.cx/wiki/index.php?title=Konfig_en:
 gui.menu.action.wiki.accel = -
-gui.menu.action.wiki.desc = Hledat pomoc na wikipedia
+gui.menu.action.wiki.desc = Hledat pomoc na jDownloader wiki
 gui.menu.action.wiki.mnem = -
-gui.menu.action.wiki.name = Wikipedia
+gui.menu.action.wiki.name = Otevřít Wiki
 plugins.container.dlc.showdialogoncreatedlc = Zobrazit potvrzovací zprávu po vytvoření
 gui.dialog.about.sourceurl = http://jdservice.ath.cx/html/about_en.html
 gui.dialog.about.title = O JDownloader
