--- a/trunk/ressourcen/jd/languages/Nederlands.lng
+++ b/trunk/ressourcen/jd/languages/Nederlands.lng
@@ -703,9 +703,9 @@ gui.menu.action.viewlog.desc = Als geselecteerd wordt het Log Venster getoond.
 gui.menu.action.viewlog.mnem = L
 gui.menu.action.viewlog.name = Logvenster
 gui.menu.action.wiki.accel = CTRL+W
-gui.menu.action.wiki.desc = JDownloader Wikipedia openen
+gui.menu.action.wiki.desc = jDownloader wiki openen
 gui.menu.action.wiki.mnem = W
-gui.menu.action.wiki.name = Wikipedia Openen
+gui.menu.action.wiki.name = Wiki Openen
 gui.menu.action_mnem = K
 gui.menu.addons = Add-ons
 gui.menu.edit = Bewerken
