--- a/trunk/ressourcen/jd/languages/Russian.lng
+++ b/trunk/ressourcen/jd/languages/Russian.lng
@@ -967,7 +967,7 @@ gui.configdialog.wikilink.theconfigurationmenu = http://wiki.jdownloader.org/ind
 gui.menu.action.wiki.accel = -
 gui.menu.action.wiki.desc = Поиск справки в википедии
 gui.menu.action.wiki.mnem = -
-gui.menu.action.wiki.name = Wikipedia
+gui.menu.action.wiki.name = Wiki
 plugins.container.dlc.showdialogoncreatedlc = Показать настройки после создания
 gui.dialog.about.sourceurl = http://jdservice.ath.cx/html/about_en.html
 gui.dialog.about.title = О программе
