--- a/trunk/ressourcen/jd/languages/french.lng
+++ b/trunk/ressourcen/jd/languages/french.lng
@@ -506,7 +506,7 @@ gui.menu.action.about.desc = À propos de JDownloader
 gui.menu.action.about.mnem = A
 gui.menu.action.about.name = À propos de JDownloader
 gui.menu.action.wiki.accel = CTRL+W
-gui.menu.action.wiki.desc = Ouvrir JDownloader Wikipedia
+gui.menu.action.wiki.desc = Ouvrir jDownloader wiki
 gui.menu.action.wiki.mnem = W
 gui.menu.action.wiki.name = Aller sur le Wiki de jD
 gui.menu.action.add.accel = CTRL+V
