--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -25,6 +25,7 @@ addons.schedule.menu.stop = Stop
 addons.schedule.menu.time = Zeitpunkt wählen:
 addons.schedule.name = Zeitplaner
 config.container.defaultname = Allgemein
+config.entriespanel.defaultname = Konfiguration
 container.message.comment = Kommentar
 container.message.created = Erstellt mit
 container.message.password = Passwort
@@ -113,6 +114,7 @@ gui.component.textarea.context.copy = Kopieren
 gui.component.textarea.context.delete = Löschen
 gui.component.textarea.context.paste = Einfügen
 gui.config.addons.install.tab = Installation & Updates
+gui.config.addons.name = Netzwerk/Download
 gui.config.addons.settings.tab = Einstellungen
 gui.config.btn_cancel = Abbrechen
 gui.config.btn_restart = Speichern und neu starten
@@ -122,6 +124,7 @@ gui.config.captcha.train.level = Anzeigeschwelle
 gui.config.captcha.train.level.instanthelp = http://jdownloader.ath.cx/page.php?id=3
 gui.config.captcha.train.show_timeout = Anzeigedauer des Eingabefensters
 gui.config.download.autochunks = Chunks an Dateigröße anpassen.
+gui.config.download.autoresume = Reconnect darf weiterführbare Downloads unterbrechen
 gui.config.download.buffersize = Max. Buffersize[MB]
 gui.config.download.chunks = Anzahl der Verbindungen/Datei(Chunkload
 gui.config.download.connectionlost.wait = Wartezeit nach Verbindungsabbruch [s]
@@ -350,11 +353,14 @@ gui.dialogs.agb_tos.readAgb = %s AGB lesen
 gui.dialogs.agb_tos.title = Allgemeine Geschäftsbedingungen nicht akzeptiert
 gui.dialogs.helpDialog.btn.help = Hilfe anzeigen
 gui.dialogs.helpDialog.btn.ok = OK
+gui.dialogs.helpDialog.btn.stopTimer = Timer stoppen
 gui.dialogs.helpDialog.defaultTitle = jDownloader Soforthilfe
 gui.dialogs.progress.title = Fortschritt...bitte warten
 gui.download.bps = bytes/s
+gui.download.create_connection = Verbinden...
 gui.download.filesize_unknown = Dateigröße unbekannt
 gui.download.kbps = kb/s
+gui.download.onlinecheckfailed = [Nicht verfügbar]
 gui.download.waittime_status = Warte %s Min.
 gui.downloadlink.aborted = [abgebrochen]
 gui.downloadlink.disabled = [deaktiviert]
@@ -423,7 +429,23 @@ gui.linkgrabber.tabs.context.newpackage = Neues Paket
 gui.linkgrabber.title = Linksammler:
 gui.linkgrabber.title_1 = Link(s) in
 gui.linkgrabber.title_2 = Paket(en)
-gui.linkinformation.title = Link Information:
+gui.linkinfo.available = Verfügbar
+gui.linkinfo.available.notchecked = noch nicht überprüft
+gui.linkinfo.available.ok = Datei OK
+gui.linkinfo.comment = Kommentar
+gui.linkinfo.download = Download
+gui.linkinfo.download.activated =  ist aktiviert
+gui.linkinfo.download.deactivated =  ist deaktiviert
+gui.linkinfo.download.notunderway =  ist nicht in Bearbeitung
+gui.linkinfo.download.underway =  ist in Bearbeitung
+gui.linkinfo.filesize = Dateigröße
+gui.linkinfo.package = Packet
+gui.linkinfo.password = Passwort
+gui.linkinfo.saveto = Speichern in
+gui.linkinfo.speed = Geschwindigkeit
+gui.linkinfo.title = Link Information: 
+gui.linkinfo.waittime = Wartezeit
+gui.linkinformation.title = Link Informationen: 
 gui.linklist.editpackagename.message = Neuer Paketname
 gui.linklist.newpackage.message = Name des neuen Pakets
 gui.linklist.newpackage.title = Neues Paket erstellen
@@ -559,6 +581,14 @@ gui.menu.plugins.decrypt = Decrypter
 gui.menu.plugins.help = ?
 gui.menu.plugins.phost = Premium Hoster
 gui.messages.outofmemoryerror = Ein Speicherfehler wurde festgestellt. Neustart dringend empfohlen!\r\nBitte benachrichtige die Entwickler über diesen Fehler!
+gui.packageinfo.comment = Kommentar
+gui.packageinfo.dldirectory = Downloadverzeichnis
+gui.packageinfo.links = Links
+gui.packageinfo.loaded = Geladen
+gui.packageinfo.name = Name
+gui.packageinfo.packagesize = Paketgröße
+gui.packageinfo.password = Passwort
+gui.packageinfo.title = Paket Informationen:
 gui.reconnect.confirm = Wollen Sie sicher eine neue Verbindung aufbauen?
 gui.reconnect.failed = Reconnect fehlgeschlagen
 gui.reconnect.success = Reconnect erfolgreich
@@ -775,6 +805,8 @@ interaction.trigger.downloads_and_interactions_finished = Downloads & Interactio
 interaction.trigger.downloads_and_interactions_finished.desc = Wird aufgerufen wenn alle Downloads und alle Interactionen beendet sind.
 interaction.trigger.exit = JD wird beendet
 interaction.trigger.exit.desc = Wird beim Beenden vor dem Schließen des Programms aufgerufen
+interaction.trigger.linklist_structure_changed = Linklisten Struktur geändert
+interaction.trigger.linklist_structure_changed.desc = Wird aufgerufen wenn sich die Struktur der Linkliste geändert hat (Links eingefügt, Links fertig, ...)
 interaction.trigger.no_event = Kein Event
 interaction.trigger.no_event.desc = kein Event
 interaction.trigger.package_finished = Paket fertig
@@ -847,8 +879,10 @@ modules.reconnect.types.extern = Extern
 modules.reconnect.types.liveheader = LiveHeader/Curl
 modules.unrar.enabled.instanthelp = http://jdownloader.ath.cx/page.php?id=17
 modules.unrar.name = Entpacker
+plugin.optional.jdchat.teamviewer.yourtvdata = Deine Teamviewer Daten:
 plugin.rapidshare.tickettime = %s auf Ticket warten
 plugin.serienjunkies.archiveincomplete = Archiv nicht komplett
+plugin.serienjunkies.pageerror = SJ liefert keine Downloadlinks
 plugins.config.premium.accountnum = <html><b>Premium Account #%s</b></html>
 plugins.config.premium.accountstatus = Letzter Account Status
 plugins.config.premium.password = Passwort
@@ -871,6 +905,10 @@ plugins.decrypt.linkbankeu = Mirror Links überprüfen
 plugins.decrypt.passwordProtected = Die Links sind mit einem Passwort geschützt. Bitte geben Sie das Passwort ein:
 plugins.decrypt.rslayer.captchaExpired = Sicherheitscode abgelaufen
 plugins.decrypt.rslayer.invalidCaptchaCode = ungültiger Captcha Code
+plugins.decrypt.serienjunkies.automaticMirrorManagment = Automatisches Mirror-Management
+plugins.decrypt.serienjunkies.mirrorManagement = Mirror-Management
+plugins.decrypt.serienjunkies.noMirrorManagment = Kein Mirror-Management
+plugins.decrypt.serienjunkies.usePremiumLinks = Premiumlinks verwenden, wenn möglich
 plugins.decrypt.speedysharecom.password = Passwort eingeben:
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
@@ -965,10 +1003,9 @@ plugins.optional.langfileeditor.adoptDefaults = Standardwert(e) übernehmen
 plugins.optional.langfileeditor.adoptDefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
 plugins.optional.langfileeditor.adoptDefaultValue = Standardwert übernehmen
 plugins.optional.langfileeditor.browse = Auswählen
-plugins.optional.langfileeditor.browseLanguageFile = Language File auswählen
-plugins.optional.langfileeditor.browseSourceFolder = Source Folder auswählen
 plugins.optional.langfileeditor.cancel = Abbrechen
 plugins.optional.langfileeditor.clearAllValues = Alle Werte löschen
+plugins.optional.langfileeditor.clearValues = Werte löschen
 plugins.optional.langfileeditor.close = Schliessen
 plugins.optional.langfileeditor.colorize = Einfärbung
 plugins.optional.langfileeditor.colorizeMissing = Fehlende Einträge einfärben
@@ -983,7 +1020,6 @@ plugins.optional.langfileeditor.file = Datei
 plugins.optional.langfileeditor.firstKey = Erster Key
 plugins.optional.langfileeditor.key = Schlüssel
 plugins.optional.langfileeditor.languageFile = Language File: 
-plugins.optional.langfileeditor.languageFile.select = <Bitte Language File auswählen!>
 plugins.optional.langfileeditor.languageFileValue = Language File Wert
 plugins.optional.langfileeditor.name = JDLangFileEditor
 plugins.optional.langfileeditor.ok = OK
@@ -1003,7 +1039,6 @@ plugins.optional.langfileeditor.show_gui = LanguageEditor starten
 plugins.optional.langfileeditor.showDupes = Doppelte Einträge anzeigen
 plugins.optional.langfileeditor.sortEntries = Einträge sortieren
 plugins.optional.langfileeditor.sourceFolder = Source Folder: 
-plugins.optional.langfileeditor.sourceFolder.select = <Bitte Source Folder auswählen!>
 plugins.optional.langfileeditor.sourceValue = Source Wert
 plugins.optional.langfileeditor.string = String
 plugins.optional.langfileeditor.title = jDownloader - Language File Editor
